--- a/style.css
+++ b/style.css
@@ -5,15 +5,16 @@ body {
     justify-content: center;
     height: 100vh;
     margin: 0;
-    background-color: rgb(235, 235, 235);
+    background-color: grey;
     font-family: 'Roboto', sans-serif;
 }
 
 canvas {
-    border: 2px solid black;
+    border: 3px solid black;
     border-radius: 8px;
     display: flex;
     background-color: white;
+    box-shadow: 2px 2px 2px;
 }
 
 .btn-container {
@@ -22,7 +23,7 @@ canvas {
 
 .btn {
     padding: 10px 60px;
-    background-color: lightgreen;
+    background-color: white;
     border: none;
     font-weight: bold;
     cursor: pointer;
@@ -30,7 +31,37 @@ canvas {
     border-radius: 8px;
 }
 
+.btn:hover {
+    background-color: #7bcb7b;
+    
+}
+
 .countdown {
     font-size: 2em;
     font-weight: bold;
+}
+
+.game-over {
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: lightgreen;;
+    border: none;
+    border-radius: 8px;
+    padding: 20px;
+    font-weight: bold;
+    z-index: 2;
+}
+
+#game-container {
+    position: relative;
+}
+
+#header-container {
+    background-color: lightgrey;
+    border-radius: 8px;
+    margin-bottom: 20px;
+    padding: 8px 10px;
 }
